# cubek

./: Cargo.toml  README.md  cubek.toml
benchmarks/: Cargo.toml
benchmarks/benches/: attention.rs  cfft.rs  gemm_cpu.rs  matmul.rs  pool.rs  vecmat.rs
benchmarks/src/: attention.rs  lib.rs  registry.rs
benchmarks/src/interpolate/: benchmark.rs  problem.rs
crates/cubek/: Cargo.toml
crates/cubek-attention/: Cargo.toml
crates/cubek-attention/src/: lib.rs
crates/cubek-attention/src/backward/launch/: dkdv.rs  dq.rs  mod.rs  prepass.rs
crates/cubek-attention/src/components/batch/: base.rs  entry_point.rs
crates/cubek-attention/src/components/global/: base.rs
crates/cubek-attention/src/components/stage/: base.rs  partition_attention.rs
crates/cubek-attention/src/components/tile/: attention.rs  mask.rs  matmul.rs  mod.rs  operand.rs
crates/cubek-attention/src/definition/: spec.rs
crates/cubek-attention/src/eval/: cpu_reference.rs
crates/cubek-attention/src/eval/benchmarks/: benchmark.rs  correctness.rs  mod.rs  problem.rs  strategy.rs
crates/cubek-attention/src/forward/launch/: args.rs
crates/cubek-attention/src/routines/: base.rs  blackbox_accelerated.rs  unit.rs
crates/cubek-attention/tests/attention/: bench_catalog.rs  mod.rs
crates/cubek-attention/tests/attention/backward/: basic.rs
crates/cubek-interpolate/: Cargo.toml
crates/cubek-interpolate/src/: lib.rs
crates/cubek-interpolate/src/components/global/: base.rs  nearest_backward.rs
crates/cubek-interpolate/src/components/readers/: global_memory.rs  shared_memory.rs
crates/cubek-interpolate/src/components/writers/: base.rs
crates/cubek-interpolate/src/cpu_reference/: mod.rs
crates/cubek-interpolate/src/cpu_reference/backward/: mod.rs
crates/cubek-interpolate/src/cpu_reference/forward/: bicubic.rs  bilinear.rs  lanczos3.rs  mod.rs  nearest.rs
crates/cubek-interpolate/src/definition/: base.rs  error.rs  mod.rs  mode.rs  options.rs  tile_size.rs
crates/cubek-interpolate/src/definition/modes/: bicubic.rs  bilinear.rs  lanczos3.rs  nearest.rs
crates/cubek-interpolate/src/eval/: mod.rs
crates/cubek-interpolate/src/eval/benchmarks/: benchmark.rs  correctness.rs  mod.rs  problem.rs  strategy.rs
crates/cubek-interpolate/src/eval/cpu_reference/: mod.rs  nearest.rs
crates/cubek-interpolate/src/kernel/: mod.rs
crates/cubek-interpolate/src/kernel/backward/: mod.rs  nearest.rs
crates/cubek-interpolate/src/kernel/forward/: bicubic.rs  bilinear.rs  lanczos3.rs  mod.rs  nearest.rs
crates/cubek-interpolate/src/launch/: base.rs
crates/cubek-interpolate/src/routines/: base.rs  blueprint.rs  shared_memory.rs
crates/cubek-interpolate/tests/: lib.rs
crates/cubek-interpolate/tests/interpolate/: bench_catalog.rs  mod.rs  nearest.rs  shared_memory.rs
crates/cubek-interpolate/tests/interpolate/backward/: mod.rs
crates/cubek-interpolate/tests/interpolate/forward/: bicubic.rs  bilinear.rs  lanczos3.rs  mod.rs  nearest.rs
crates/cubek-interpolate/tests/units/: mod.rs
crates/cubek-interpolate/tests/units/backward/: nearest_backward.rs
crates/cubek-interpolate/tests/units/forward/: lanczos3.rs
crates/cubek-matmul/: Cargo.toml  README.md
crates/cubek-matmul/src/: args.rs  launch.rs  lib.rs
crates/cubek-matmul/src/components/: tile.rs
crates/cubek-matmul/src/components/batch/: base.rs  layout.rs  mod.rs
crates/cubek-matmul/src/components/global/: base.rs
crates/cubek-matmul/src/components/stage/: base.rs
crates/cubek-matmul/src/components/tile/: mod.rs  (+1 more)
crates/cubek-matmul/src/definition/: base.rs  cube_mapping.rs  error.rs  inner_layout.rs
crates/cubek-matmul/src/eval/: cpu_reference.rs
crates/cubek-matmul/src/launch/: args.rs  complex.rs  handle.rs  launch_gemm.rs  launch_mosaic.rs  launch_naive.rs  launch_nostage_vecmat.rs  launch_tiling.rs  launch_vecmat_plane_parallel.rs  launch_vecmat_unit_perpendicular.rs  mod.rs  strategy.rs  tune_key.rs
crates/cubek-matmul/src/routines/: base.rs  gemm.rs  interleaved.rs  mod.rs  mosaic.rs  nostage_vecmat.rs
crates/cubek-matmul/src/strategy/: mod.rs  select_kernel.rs  strategy.rs  test_only.rs
crates/cubek-matmul/tests/: lib.rs
crates/cubek-matmul/tests/matmul/: bench_catalog.rs  bias.rs  launcher_strategy.rs  mod.rs
crates/cubek-matmul/tests/suite/: complex.rs  mod.rs
crates/cubek-pool/: Cargo.toml
crates/cubek-pool/src/: lib.rs
crates/cubek-pool/src/cpu_reference/: mod.rs
crates/cubek-pool/src/definition/: base.rs  error.rs  mod.rs  options.rs
crates/cubek-pool/src/kernel/: mod.rs
crates/cubek-pool/tests/pool/: bench_catalog.rs  mod.rs
crates/cubek-pool/tests/units/: mod.rs
crates/cubek-quant/: Cargo.toml
crates/cubek-quant/src/: dequantize.rs  dequantize2.rs  lib.rs  quantize.rs
crates/cubek-quant/src/layout/: scales.rs
crates/cubek-quant/tests/: lib.rs
crates/cubek-quant/tests/quant/: symmetric.rs
crates/cubek-quant/tests/suite/: symmetric.rs
crates/cubek-random/: Cargo.toml
crates/cubek-random/src/: base.rs  bernoulli.rs  normal.rs  uniform.rs
crates/cubek-random/tests/random/: interval.rs
crates/cubek-std/: Cargo.toml
crates/cubek-std/src/: cube_dim_resource.rs  error.rs  lib.rs  matrix_layout.rs
crates/cubek-std/src/layout/: mod.rs
crates/cubek-std/src/tile/: base.rs  mask.rs  mod.rs  scope.rs
crates/cubek-test-utils/: Cargo.toml  README.md
crates/cubek-test-utils/src/: lib.rs  registry.rs  tile_input.rs
crates/cubek-test-utils/src/test_mode/: result.rs
crates/cubek-test-utils/src/test_tensor/: base.rs  host_data.rs  quant.rs  random.rs  strides.rs
crates/cubek-test-utils/tests/test_utils/: mod.rs
crates/cubek-tile/: Cargo.toml  README.md
crates/cubek-tile/src/: dim2.rs  lib.rs  matrix.rs  tile.rs
crates/cubek-tile/src/matmul/: leaf.rs  lower.rs  mod.rs  register.rs  schedule.rs
crates/cubek-tile/src/partitioner/: base.rs  cube_count.rs  distribution.rs  mod.rs  walk.rs  walk_order.rs
crates/cubek-tile/src/space/: axis.rs  base.rs  grid.rs  mod.rs  point.rs
crates/cubek-tile/tests/tile/: matmul.rs  mod.rs  recursive.rs
crates/cubek/src/: lib.rs
(+427 files in other folders)
