[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*", "xtask", "benchmarks"]
exclude = ["crates/.claude"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.92"
version = "0.2.0"

[workspace.dependencies]
### For local development. ###
# cubecl = { path = "../cubecl/crates/cubecl", default-features = false }
# cubecl-common = { path = "../cubecl/crates/cubecl-common", default-features = false }

### For the main cubek branch. ###
# cubecl = { git = "https://github.com/tracel-ai/cubecl", rev = "7cf203735e095e640a2c03b2400d0faa03196bb4", default-features = false }
# cubecl-common = { git = "https://github.com/tracel-ai/cubecl", rev = "7cf203735e095e640a2c03b2400d0faa03196bb4", default-features = false }

### For tensor4all fork integration. ###
cubecl = { git = "https://github.com/tensor4all/cubecl.git", rev = "f5e5ec178f9aebca9362b829ffef708f720ff692", default-features = false }
cubecl-common = { git = "https://github.com/tensor4all/cubecl.git", rev = "f5e5ec178f9aebca9362b829ffef708f720ff692", default-features = false }

derive-new = { version = "0.7.0", default-features = false }
log = { default-features = false, version = "0.4.22" }

serde = { version = "1.0.204", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed

rand = { version = "0.10.0", default-features = false, features = [
    "std_rng",
] } # std_rng is for no_std

# Testing
rstest = "0.26"

bytemuck = "1.16.1"
half = { version = "2.5", features = [
    "alloc",
    "num-traits",
    "serde",
], default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] } # libm is for no_std
num-complex = "0.4.6"

enumset = { version = "1.1.10", default-features = false }
thiserror = { version = "2", default-features = false }

### For xtask crate ###
strum = { version = "0.28", features = ["derive"] }
tracel-xtask = { version = "=4.16.0" }

pretty_assertions = "1.4"

[profile.dev]
debug = 1     # Speed up compilation time and not necessary.
opt-level = 0

[profile.dev.build-override]
opt-level = 3
