[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = [
    "crates/cubek-matmul",
    "crates/cubek-quant",
    "crates/cubek-random",
    "crates/cubek-std",
    "crates/cubek-test-utils",
    "xtask",
]
exclude = [
    "benchmarks",
    "crates/.claude",
    "crates/cubek",
    "crates/cubek-attention",
    "crates/cubek-convolution",
    "crates/cubek-fft",
    "crates/cubek-interpolate",
    "crates/cubek-reduce",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.92"
version = "0.2.0"

[workspace.dependencies]
### tensor4all fork release preparation. ###
# PR/CI builds use the tensor4all CubeCL commit that adds the `t4a-cubecl*`
# package manifests. Published packages use the registry packages at the same
# exact versions.
cubecl = { package = "t4a-cubecl", git = "https://github.com/tensor4all/cubecl.git", rev = "68365e47322123359d0a07d741ba9771a0bf6ffe", version = "=0.10.0", default-features = false }
cubecl-common = { package = "t4a-cubecl-common", git = "https://github.com/tensor4all/cubecl.git", rev = "68365e47322123359d0a07d741ba9771a0bf6ffe", version = "=0.10.0", default-features = false }

derive-new = { version = "0.7.0", default-features = false }
log = { default-features = false, version = "0.4.22" }

serde = { version = "1.0.204", default-features = false, features = [
    "derive",
    "alloc",
] } # alloc is for no_std, derive is needed

rand = { version = "0.10.0", default-features = false, features = [
    "std_rng",
] } # std_rng is for no_std

# Testing
rstest = "0.26"

bytemuck = "1.16.1"
half = { version = "2.5", features = [
    "alloc",
    "num-traits",
    "serde",
], default-features = false }
num-traits = { version = "0.2.19", default-features = false, features = [
    "libm",
] } # libm is for no_std
num-complex = "0.4.6"

enumset = { version = "1.1.10", default-features = false }
thiserror = { version = "2", default-features = false }

### For xtask crate ###
strum = { version = "0.28", features = ["derive"] }
tracel-xtask = { version = "=4.16.0" }

pretty_assertions = "1.4"

[profile.dev]
debug = 1     # Speed up compilation time and not necessary.
opt-level = 0

[profile.dev.build-override]
opt-level = 3
