[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Benchmarks"
edition.workspace = true
keywords = []
license.workspace = true
name = "benchmarks"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek"
version.workspace = true

[features]
# Pulls in each kernel crate's `cpu-reference` feature so categories can return
# CPU-reference HostData via `BenchmarkCategory::reference_result`. The umbrella
# `cubek` crate doesn't re-expose `cpu-reference` today, so consumers that need
# the correctness flow turn it on here and pick up the per-kernel toggle.
cpu-reference = [
    "cubek-attention/cpu-reference",
    "cubek-matmul/cpu-reference",
    "cubek-interpolate/cpu-reference",
    "cubek-convolution/cpu-reference",
    "cubek-fft/cpu-reference",
    "cubek-reduce/cpu-reference",
]

[lib]
path = "src/lib.rs"

[dependencies]
cubecl = { workspace = true, features = ["test-runtime", "stdlib"] }
cubek = { path = "../crates/cubek", version = "=0.2.0-pre.5", default-features = false, features = [
    "stdlib",
    "random",
    "reduce",
    "matmul",
    "convolution",
    "attention",
    "interpolate",
    "fft",
    "quantization",
] }
cubek-attention = { path = "../crates/cubek-attention", version = "=0.2.0-pre.5", features = [
    "benchmarks",
] }
cubek-convolution = { path = "../crates/cubek-convolution", version = "=0.2.0-pre.5", features = [
    "benchmarks",
] }
cubek-fft = { path = "../crates/cubek-fft", version = "=0.2.0-pre.5", features = [
    "benchmarks",
] }
cubek-interpolate = { path = "../crates/cubek-interpolate", version = "=0.2.0-pre.5", features = [
    "benchmarks",
] }
cubek-matmul = { path = "../crates/cubek-matmul", version = "=0.2.0-pre.5", features = [
    "benchmarks",
] }
cubek-reduce = { path = "../crates/cubek-reduce", version = "=0.2.0-pre.5", features = [
    "benchmarks",
] }
cubek-std = { path = "../crates/cubek-std", version = "=0.2.0-pre.5", features = [
    "benchmarks",
] }
cubek-test-utils = { path = "../crates/cubek-test-utils", version = "=0.2.0-pre.5" }
half = { workspace = true }

[[bench]]
harness = false
name = "gemm"

[[bench]]
harness = false
name = "gemv"

[[bench]]
harness = false
name = "interpolate"

[[bench]]
harness = false
name = "reduce"

[[bench]]
harness = false
name = "conv2d"

[[bench]]
harness = false
name = "memcpy_async"

[[bench]]
harness = false
name = "unary"

[[bench]]
harness = false
name = "attention"

[[bench]]
harness = false
name = "contiguous"

[[bench]]
harness = false
name = "fft"

[[bench]]
harness = false
name = "quantized_matmul"
