[package]
authors = ["louisfd <louisfd94@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Attention Kernels"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-attention"
readme.workspace = true
repository = "https://github.com/tracel-ai/cubek/tree/main/crates/cubek-attention"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std"]

heavy = []
extended = ["heavy"]
full = ["extended", "benchmarks"]

cpu-reference = ["dep:cubek-test-utils"]
# Enables `pub mod benchmarks` — catalogue of benchmark problems / strategies,
# the bench harness, and the seeded `AttentionCorrectness` impl. Implies
# `cpu-reference` because the correctness wrapper compares kernel output
# against the CPU flash-attention reference. Off by default; the top-level
# `benchmarks` crate turns it on.
benchmarks = ["cpu-reference", "cubecl/test-runtime"]

[dependencies]
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }
cubek-matmul = { path = "../cubek-matmul", version = "=0.3.0-pre.1", default-features = false }
cubek-std = { path = "../cubek-std", version = "=0.3.0-pre.1", default-features = false }
cubek-test-utils = { path = "../cubek-test-utils", version = "=0.3.0-pre.1", default-features = false, optional = true }

bytemuck = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
cubek-attention = { path = ".", features = ["benchmarks"] }
cubek-test-utils = { path = "../cubek-test-utils", version = "=0.3.0-pre.1", default-features = false }
pretty_assertions = { workspace = true }
trybuild = "1"
