[package]
authors = ["samuelbelanger <samuel.belanger.11@ulaval.ca>"]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: Interpolation"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek-interpolate"
publish = false
readme.workspace = true
repository = "https://github.com/tensor4all/cubek/tree/main/crates/cubek-interpolate"
version.workspace = true

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std", "thiserror/std"]

heavy = []
extended = ["heavy"]
full = ["extended"]

cpu-reference = ["dep:cubek-test-utils"]

[dependencies]
cubecl = { workspace = true }
cubecl-common = { workspace = true }
thiserror = { workspace = true }
cubek-test-utils = { package = "t4a-cubek-test-utils", path = "./../cubek-test-utils/", version = "0.2.0", default-features = false, optional = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
cubek-interpolate = { path = ".", features = ["cpu-reference"] }
cubek-test-utils = { package = "t4a-cubek-test-utils", path = "../cubek-test-utils", version = "0.2.0", default-features = false }
