[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "Temporary tensor4all fork of CubeK: Quantization Library"
edition.workspace = true
keywords = []
license.workspace = true
name = "t4a-cubek-quant"
readme.workspace = true
repository = "https://github.com/tensor4all/cubek/tree/main/crates/cubek-quant"
version.workspace = true

[lib]
name = "cubek_quant"

[features]
default = ["kernels"]
kernels = ["std"]
std = []

heavy = []
extended = ["heavy"]
full = ["extended"]

[dependencies]
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true, features = ["fp8"] }

half.workspace = true
serde = { workspace = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
