[package]
authors = ["nathanielsimard <nathaniel.simard.42@gmail.com>"]
categories = ["science", "mathematics", "algorithms"]
description = "Temporary tensor4all fork of CubeK: Random Number Generation"
edition.workspace = true
keywords = []
license.workspace = true
name = "t4a-cubek-random"
readme.workspace = true
repository = "https://github.com/tensor4all/cubek/tree/main/crates/cubek-random"
version.workspace = true

[lib]
name = "cubek_random"

[features]
default = ["std", "cubecl/default"]
std = ["cubecl/std"]

heavy = []
extended = ["heavy"]
full = ["extended"]

[dependencies]
cubecl = { workspace = true }
cubecl-common = { workspace = true }
num-traits = "0.2.19"
pretty_assertions = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
half = { workspace = true }

[dev-dependencies]
cubecl = { workspace = true, features = ["test-runtime"] }
