[package]
authors = ["louisfd <louisfd94@gmail.com>"]
description = "Temporary tensor4all fork of CubeK: Standard Library"
edition.workspace = true
license.workspace = true
name = "t4a-cubek-std"
readme.workspace = true
rust-version.workspace = true
repository = "https://github.com/tensor4all/cubek/tree/main/crates/cubek-std"
version.workspace = true

[lib]
name = "cubek_std"

[features]
default = ["cubecl/default"]
std = ["cubecl/std"]

heavy = []
extended = ["heavy"]
full = ["extended"]

[dependencies]
cubecl = { workspace = true, features = ["stdlib"] }
cubecl-common = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }

[dev-dependencies]
cubek-test-utils = { package = "t4a-cubek-test-utils", path = "../cubek-test-utils", version = "0.2.0", default-features = false }
