[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
description = "Temporary tensor4all fork of CubeK: Test Utils"
edition.workspace = true
license.workspace = true
name = "t4a-cubek-test-utils"
readme = "README.md"
rust-version.workspace = true
repository = "https://github.com/tensor4all/cubek/tree/main/crates/cubek-test-utils"
version.workspace = true

[lib]
name = "cubek_test_utils"

[features]
default = ["cubecl/default"]
std = ["cubecl/std"]

heavy = []
extended = ["heavy"]
full = ["extended"]

[dependencies]
cubek-random = { package = "t4a-cubek-random", path = "../cubek-random", version = "0.2.0", default-features = false }
cubek-quant = { package = "t4a-cubek-quant", path = "../cubek-quant", version = "0.2.0" }

bytemuck = { workspace = true }
cubecl = { workspace = true, features = ["stdlib", "test-runtime"] }
cubecl-common = { workspace = true }
half = { workspace = true, features = ["bytemuck"] }
serde = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
trybuild = "1"
