[package]
authors = [
    "nathanielsimard <nathaniel.simard.42@gmail.com>",
    "louisfd <louisfd94@gmail.com>",
]
categories = ["science", "mathematics", "algorithms"]
description = "CubeK: CubeCL Kernels"
edition.workspace = true
keywords = []
license.workspace = true
name = "cubek"
publish = false
readme.workspace = true
repository = "https://github.com/tensor4all/cubek"
version.workspace = true

[features]
default = [
    "std",
    "stdlib",
    "cubek-std?/default",
    "cubek-quant?/default",
    "cubek-random?/default",
    "cubek-reduce?/default",
    "cubek-matmul?/default",
    "cubek-convolution?/default",
    "cubek-attention?/default",
    "cubek-interpolate?/default",
    "cubek-fft?/default"
]

std = [
    "cubek-std?/std",
    "cubek-quant?/std",
    "cubek-random?/std",
    "cubek-reduce?/std",
    "cubek-matmul?/std",
    "cubek-convolution?/std",
    "cubek-attention?/std",
    "cubek-interpolate?/std",
    "cubek-fft?/std",
]

attention = ["cubek-attention"]
interpolate = ["cubek-interpolate"]
convolution = ["cubek-convolution"]
matmul = ["cubek-matmul"]
quantization = ["cubek-quant/kernels"]
random = ["cubek-random"]
reduce = ["cubek-reduce"]
stdlib = ["cubek-std"]
fft = ["cubek-fft"]


[dependencies]
cubecl = { workspace = true }
cubek-attention = { path = "../cubek-attention", version = "0.2.0", default-features = false, optional = true }
cubek-interpolate = { path = "../cubek-interpolate", version = "0.2.0", default-features = false, optional = true }
cubek-convolution = { path = "../cubek-convolution", version = "0.2.0", default-features = false, optional = true }
cubek-matmul = { package = "t4a-cubek-matmul", path = "../cubek-matmul", version = "0.2.0", default-features = false, optional = true }
cubek-quant = { package = "t4a-cubek-quant", path = "../cubek-quant", version = "0.2.0", default-features = false, optional = true }
cubek-random = { package = "t4a-cubek-random", path = "../cubek-random", version = "0.2.0", default-features = false, optional = true }
cubek-reduce = { path = "../cubek-reduce", version = "0.2.0", default-features = false, optional = true }
cubek-fft = { path = "../cubek-fft", version = "0.2.0", default-features = false, optional = true }
cubek-std = { package = "t4a-cubek-std", path = "../cubek-std", version = "0.2.0", default-features = false, optional = true }
